BD + first model

--- a/config.env
+++ b/config.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
 USER=artem
-PASSWORD=123
+DATABASE_PASSWORD=1111
 PORT=3000
+DATABASE=mongodb+srv://adminuser:<PASSWORD>@cluster0.apfoghd.mongodb.net/natours?retryWrites=true&w=majority
