Signup and Login user

--- a/config.env
+++ b/config.env
@@ -3,3 +3,5 @@ USER=artem
 DATABASE_PASSWORD=1111
 PORT=3000
 DATABASE=mongodb+srv://adminuser:<PASSWORD>@cluster0.apfoghd.mongodb.net/natours?retryWrites=true&w=majority
+JWT_SECRET=my-zsecretz-keyman
+JWT_EXPIRES_IN=1d
